# de

./: .gitignore  Cargo.toml  IDEAS.md
assets/: jungle.level.ron  jungle.world.ron  jungle2.world.ron  jungle_race.level.ron  jungle_wide_tag.level.ron  test.level.ron  test.world.ron
crates/blackbox/: Cargo.toml
crates/blackbox/src/: lib.rs
crates/graybox/: Cargo.toml
crates/graybox/src/: apply.rs  ext.rs  interfaces.rs  lib.rs  timed_interaction.rs
crates/graybox/src/ext/: apply.rs  functions.rs  inspection.rs  mod.rs
crates/l/: Cargo.toml
crates/l/src/: lib.rs
src/: camera.rs  helpers.rs  load_assets.rs  main.rs
src/frame_stop/: mod.rs
src/word/: apply_words.rs  mod.rs  movement.rs  resting_word.rs  spawn.rs  ui.rs  word_id.rs
src/word/ui/: drag_and_drop.rs  mod.rs
src/word_ui/: mod.rs
src/world/: dropdown.rs  editor.rs  fan.rs  helpers.rs  lock_zone.rs  mod.rs  player_spawner.rs  word_tag.rs
src/world/editor/: dropdown.rs  mod.rs
src/world/objects/: camera_zone.rs  death_zone.rs  fan.rs  lock_zone.rs  mod.rs  player_spawner.rs  word_tag.rs
src/world/save_and_load/: load.rs  mod.rs  save.rs
