workspace = { members = ["crates/graybox"] }

[package]
name = "de"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["bmp", "serialize", "file_watcher"] }
bevy_simple_tilemap = "0.13.0"
bevy_rapier2d = "0.23.0"
ron = "*"
serde = "*"
slotmap = "1.0.6"

graybox = { path = "crates/graybox" }
