workspace = { members = [ "crates/blackbox","crates/graybox", "crates/l"] }

[package]
name = "de"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["bmp", "serialize", "file_watcher"] }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
bevy_rapier2d = "0.23.0"
ron = "*"
serde = "*"
grid = { version = "0.12.0", features = ["serde"] }
slotmap = "1.0.6"

graybox = { path = "crates/graybox" }
#blackbox = { path = "crates/blackbox" }

leafwing_input_playback = { git = "https://github.com/amjoshuamichael/leafwing_input_playback.git" }
